syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "google/protobuf/timestamp.proto";

import "telemetry/message/motion_sensor_event.proto";
import "telemetry/message/temperature_sensor_event.proto";
import "telemetry/message/light_sensor_event.proto";
import "telemetry/message/climate_sensor_event.proto";
import "telemetry/message/switch_sensor_event.proto";

message SensorEventProto {
  string id = 1; // идентификатор датчика
  google.protobuf.Timestamp timestamp = 2; // таймстемп события
  string hubId = 3; // идентификатор связанного хаба
  oneof payload { // данные события от конкретного устройства
    MotionSensorProto motion_sensor_event = 4;            // данные события датчика движения
    TemperatureSensorProto temperature_sensor_event = 5;  // данные события температурного датчика
    LightSensorProto light_sensor_event = 6;              // данные события датчика освещённости
    ClimateSensorProto climate_sensor_event = 7;          // данные события климатического датчика
    SwitchSensorProto switch_sensor_event = 8;            // данные события датчика-переключателя
  }
}