syntax = "proto3";

package telemetry.service.collector;

option java_package = "ru.yandex.practicum.grpc.telemetry.service.collector";

import "google/protobuf/empty.proto";
import "telemetry/message/event/sensor_event.proto";
import "telemetry/message/event/hub_event.proto";

service CollectorController {
  rpc CollectSensorEvent (telemetry.message.event.SensorEventProto)
      returns (google.protobuf.Empty);

  rpc CollectHubEvent (telemetry.message.event.HubEventProto)
      returns (google.protobuf.Empty);
}